; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax_disc_interface.c_IOSUHAX_sdio_startup.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax_disc_interface.c_IOSUHAX_sdio_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FSA_REF_SD = common dso_local global i32 0, align 4
@sdioFd = common dso_local global i32 0, align 4
@fsaFdSd = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"/dev/sdcard01\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @IOSUHAX_sdio_startup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @IOSUHAX_sdio_startup() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @FSA_REF_SD, align 4
  %4 = call i32 @IOSUHAX_disc_io_fsa_open(i32 %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %23

7:                                                ; preds = %0
  %8 = load i32, i32* @sdioFd, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %7
  %11 = load i32, i32* @fsaFdSd, align 4
  %12 = call i32 @IOSUHAX_FSA_RawOpen(i32 %11, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32* @sdioFd)
  store i32 %12, i32* %2, align 4
  %13 = load i32, i32* %2, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load i32, i32* @FSA_REF_SD, align 4
  %17 = call i32 @IOSUHAX_disc_io_fsa_close(i32 %16)
  store i32 -1, i32* @sdioFd, align 4
  br label %18

18:                                               ; preds = %15, %10
  br label %19

19:                                               ; preds = %18, %7
  %20 = load i32, i32* @sdioFd, align 4
  %21 = icmp sge i32 %20, 0
  %22 = zext i1 %21 to i32
  store i32 %22, i32* %1, align 4
  br label %23

23:                                               ; preds = %19, %6
  %24 = load i32, i32* %1, align 4
  ret i32 %24
}

declare dso_local i32 @IOSUHAX_disc_io_fsa_open(i32) #1

declare dso_local i32 @IOSUHAX_FSA_RawOpen(i32, i8*, i32*) #1

declare dso_local i32 @IOSUHAX_disc_io_fsa_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
